--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,6 +13,7 @@
              Services
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
+              <a ngbDropdownItem routerLink="/Owner" (click)="$event.preventDefault()">Owner</a>
               <a ngbDropdownItem routerLink="/FunctionCategory" (click)="$event.preventDefault()">Function Category</a>
               <a ngbDropdownItem routerLink="/FunctionDetails"(click)="$event.preventDefault()">Function Details</a>
               <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Add</a>
