society-owner-guard-added

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,9 +14,10 @@
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
               <a ngbDropdownItem routerLink="/Owner" (click)="$event.preventDefault()">Owner</a>
+              <a ngbDropdownItem routerLink="/House" (click)="$event.preventDefault()">House</a>
               <a ngbDropdownItem routerLink="/FunctionCategory" (click)="$event.preventDefault()">Function Category</a>
-              <a ngbDropdownItem routerLink="/FunctionDetails"(click)="$event.preventDefault()">Function Details</a>
-              <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Add</a>
+              <a ngbDropdownItem routerLink="/FunctionDetails" (click)="$event.preventDefault()">Function Details</a>
+              <a ngbDropdownItem routerLink="/NearByServiceCAtegory" (click)="$event.preventDefault()">Near By Services</a>
             </div>
           </li>
         <li class="nav-item">
