--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,6 +18,9 @@
               <a ngbDropdownItem routerLink="/FunctionCategory" (click)="$event.preventDefault()">Function Category</a>
               <a ngbDropdownItem routerLink="/FunctionDetails" (click)="$event.preventDefault()">Function Details</a>
               <a ngbDropdownItem routerLink="/NearByServiceCAtegory" (click)="$event.preventDefault()">Near By Services</a>
+              <a ngbDropdownItem routerLink="/parking" (click)="$event.preventDefault()">Parking</a>
+              <a ngbDropdownItem routerLink="/Guard" (click)="$event.preventDefault()">guard</a>
+              <a ngbDropdownItem routerLink="/Society" (click)="$event.preventDefault()">society</a>
             </div>
           </li>
         <li class="nav-item">
