--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,6 +8,9 @@
         <li class="nav-item ">
           <a class="nav-link" routerLink='/'>Home<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item ">
+          <a class="nav-link" routerLink='/House'>House<span class="sr-only">(current)</span></a>
+        </li>
         <li class="nav-item" ngbDropdown>
             <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown2" >
              Services
@@ -17,10 +20,11 @@
               <a ngbDropdownItem routerLink="/House" (click)="$event.preventDefault()">House</a>
               <a ngbDropdownItem routerLink="/FunctionCategory" (click)="$event.preventDefault()">Function Category</a>
               <a ngbDropdownItem routerLink="/FunctionDetails" (click)="$event.preventDefault()">Function Details</a>
-              <a ngbDropdownItem routerLink="/NearByServiceCAtegory" (click)="$event.preventDefault()">Near By Services</a>
+              <a ngbDropdownItem routerLink="/NearByServiceCAtegory" (click)="$event.preventDefault()">Near By Services Category</a>
               <a ngbDropdownItem routerLink="/parking" (click)="$event.preventDefault()">Parking</a>
               <a ngbDropdownItem routerLink="/Guard" (click)="$event.preventDefault()">guard</a>
               <a ngbDropdownItem routerLink="/Society" (click)="$event.preventDefault()">society</a>
+              <a ngbDropdownItem routerLink="/" (click)="$event.preventDefault()">xyv</a>
             </div>
           </li>
         <li class="nav-item">
