--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -30,7 +30,7 @@
         <li class="nav-item">
           <a class="nav-link" routerLink='/'>Contact<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item form-inline">
           <a class="nav-link" style="text-align: right;">{{name}}<span class="sr-only">(current)</span></a>
           <li class="nav-item" [hidden]="ifpresent">
             <a class="nav-link" (click)="logout()">Logout<span class="sr-only">(current)</span></a>
