--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,11 +6,9 @@
     <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item ">
-          <a class="nav-link" routerLink='/'>Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink='/AdminHome'>Home<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item ">
-          <a class="nav-link" routerLink='/House'>House<span class="sr-only">(current)</span></a>
-        </li>
+       
         <li class="nav-item" ngbDropdown>
             <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown2" >
              Services
@@ -18,24 +16,30 @@
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
               <a ngbDropdownItem routerLink="/Owner" (click)="$event.preventDefault()">Owner</a>
               <a ngbDropdownItem routerLink="/House" (click)="$event.preventDefault()">House</a>
+              <a ngbDropdownItem routerLink="/Society" (click)="$event.preventDefault()">society</a>
+              <a ngbDropdownItem routerLink="/Guard" (click)="$event.preventDefault()">guard</a>
               <a ngbDropdownItem routerLink="/FunctionCategory" (click)="$event.preventDefault()">Function Category</a>
               <a ngbDropdownItem routerLink="/FunctionDetails" (click)="$event.preventDefault()">Function Details</a>
-              <a ngbDropdownItem routerLink="/NearByServiceCAtegory" (click)="$event.preventDefault()">Near By Services Category</a>
+              <a ngbDropdownItem routerLink="/UserService" (click)="$event.preventDefault()">User Service</a>
               <a ngbDropdownItem routerLink="/parking" (click)="$event.preventDefault()">Parking</a>
-              <a ngbDropdownItem routerLink="/Guard" (click)="$event.preventDefault()">guard</a>
-              <a ngbDropdownItem routerLink="/Society" (click)="$event.preventDefault()">society</a>
-              <a ngbDropdownItem routerLink="/" (click)="$event.preventDefault()">xyv</a>
+              <a ngbDropdownItem routerLink="/NaerByServices" (click)="$event.preventDefault()">NearBy Service</a>
+              <a ngbDropdownItem routerLink="/AdditionalFacility" (click)="$event.preventDefault()">Additional Facility</a>
+              <a ngbDropdownItem routerLink="/servicesCategory" (click)="$event.preventDefault()">services Category</a>
+              <a ngbDropdownItem routerLink="/NearByServiceCAtegory" (click)="$event.preventDefault()">NearBy Service category</a>
             </div>
           </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink='/'>Contact<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item form-inline">
-          <a class="nav-link" style="text-align: right;">{{name}}<span class="sr-only">(current)</span></a>
-          <li class="nav-item" [hidden]="ifpresent">
-            <a class="nav-link" (click)="logout()">Logout<span class="sr-only">(current)</span></a>
-        </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item ">
+            <a class="nav-link" >{{name}}<span class="sr-only">(current)</span></a>
+            <li class="nav-item " [hidden]="ifpresent">
+              <a class="nav-link" (click)="logout()">Logout<span class="sr-only">(current)</span></a>
+          </li>
+
+        </ul>
+       
+      
         
-      </ul>
+     
     </div>
   </nav>
