--- a/src/app/user-nav/user-nav.component.html
+++ b/src/app/user-nav/user-nav.component.html
@@ -6,14 +6,14 @@
     <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item ">
-          <a class="nav-link" routerLink='/'>Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink='/Home'>Home<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item ">
-          <a class="nav-link" routerLink='/House'>House<span class="sr-only">(current)</span></a>
-        </li>
+       
         <li class="nav-item" ngbDropdown>
+         
             <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown2" >
              Services
+             
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
               
@@ -23,6 +23,8 @@
         <li class="nav-item">
           <a class="nav-link" routerLink='/'>Contact<span class="sr-only">(current)</span></a>
         </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
         <a class="nav-link" >{{name}}<span class="sr-only">(current)</span></a>
         </li>
