Login-fixed-User Home

--- a/src/app/UserComponent/user-home/user-home.component.html
+++ b/src/app/UserComponent/user-home/user-home.component.html
@@ -1,1 +1,6 @@
 <app-user-nav></app-user-nav>
+<h1>{{u.Owner_FirstName}} {{u.Owner_Lastname}}</h1>
+<h3>Address:</h3>
+<h5>{{u.House_ID}} , {{u.Society_ID}} </h5>
+<h5>{{resUp.Society_Name}} , {{resUp.Society_City}} </h5>
+<h5>{{resUp.Society_Pincode}}</h5>
