--- a/src/app/user-nav/user-nav.component.html
+++ b/src/app/user-nav/user-nav.component.html
@@ -17,7 +17,7 @@
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
               
-              <a ngbDropdownItem routerLink="/" (click)="$event.preventDefault()">xyv</a>
+              <a ngbDropdownItem routerLink="/Profile" (click)="$event.preventDefault()">Profile</a>
             </div>
           </li>
         <li class="nav-item">
