--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,1 +1,21 @@
 <app-navbar></app-navbar>
+
+<div class="container">
+    <br/>
+    <div class="row">
+        <div class="col-8">
+            <a class="btn btn-dark btn-lg" routerLink="/Owner" >Owner</a>
+              <a class="btn btn-dark btn-lg" routerLink="/House" >House</a>
+              <a class="btn btn-dark btn-lg" routerLink="/Society" >society</a>
+              <a class="btn btn-dark btn-lg" routerLink="/Guard" >guard</a>
+              <a class="btn btn-dark btn-lg" routerLink="/FunctionCategory" >Function Category</a>
+              <a class="btn btn-dark btn-lg" routerLink="/FunctionDetails" >Function Details</a>
+              <a class="btn btn-dark btn-lg" routerLink="/UserService" >User Service</a>
+              <a class="btn btn-dark btn-lg" routerLink="/parking" >Parking</a>
+              <a class="btn btn-dark btn-lg" routerLink="/NaerByServices" >NearBy Service</a>
+              <a class="btn btn-dark btn-lg" routerLink="/AdditionalFacility" >Additional Facility</a>
+              <a class="btn btn-dark btn-lg" routerLink="/servicesCategory" >services Category</a>
+              <a class="btn btn-dark btn-lg" routerLink="/NearByServiceCAtegory" >NearBy Service category</a>
+        </div>
+    </div>
+</div>
