--- a/src/app/UserComponent/host-function/host-function.component.html
+++ b/src/app/UserComponent/host-function/host-function.component.html
@@ -1,1 +1,74 @@
-<p>host-function works!</p>
+<app-user-nav></app-user-nav>
+<div class="container">
+    <h2>Book Function</h2>
+    <div class="row">
+        <div class="col-6">
+            <table class="table">
+                <thead></thead>
+                <tbody>
+                    <tr>
+                        <th scope="row" >Enter Funtoion category: </th>
+                        <td><input type="number" name='FC' [(ngModel)]="res.Function_Category_ID" #FC="ngModel" required/></td>
+                            <td><span *ngIf="FC.errors?.required">Category ID cannot be empty</span></td>
+                         
+                    </tr>
+                   
+                    <tr>
+                        <th scope="row" >Enter Date Of Funtion: </th>
+                        <td><input type="date" name='Date' [(ngModel)]="res.Function_Date" #Date="ngModel" required/></td>
+                            <td><span *ngIf="Date.errors?.required">Field cannot be empty</span></td>
+                         
+                    </tr>
+                    <tr>
+                        <th scope="row" >Enter time of the function: </th>
+                        <td><input type="time" name='Time' [(ngModel)]="res.Function_Time" #Time="ngModel" required/></td>
+                            <td><span *ngIf="Time.errors?.required">Field cannot be empty</span></td>
+                         
+                    </tr>
+                    <tr>
+                        <th scope="row" >Enter Approx duration in hours: </th>
+                        <td><input type="text" name='Dur' [(ngModel)]="res.Function_Duration" #Dur="ngModel" required/></td>
+                            <td><span *ngIf="Dur.errors?.required">Metion Approx Duration</span></td>
+                         
+                    </tr>
+                    <tr>
+                        <th scope="row" >Enter Details: </th>
+                        <td><input type="text" name='Details' [(ngModel)]="res.Function_Details" #Details="ngModel" required/></td>
+                            <td><span *ngIf="Details.errors?.required">Plz metion details</span></td>
+                         
+                    </tr>
+                    
+                    <tr>
+                        <th></th>
+                        <td><button type="button" class="btn btn-dark"  (click)="InsertBookin()" >Insert </button></td>
+                    </tr>
+                </tbody>
+            </table>
+    
+        </div>
+   
+    
+    
+    <div class="col-6">
+        <div>
+            <h3>Please Choose these category Id According to your function:</h3>
+            <table class="table" >
+                <thead>
+                    <tr>
+                        <th scope="col">Function Category Id</th>
+                        <th scope="col">Function Category Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let u of result">
+                        <th scope="row">{{u.Function_Category_ID}}</th>
+                        <td>{{u.Function_Category}}</td>
+                    </tr>
+                </tbody>
+            </table>
+         </div>
+
+        </div>
+    </div>
+   
+</div>
