--- a/src/app/user-nav/user-nav.component.html
+++ b/src/app/user-nav/user-nav.component.html
@@ -16,13 +16,12 @@
              
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-right">
-              
               <a ngbDropdownItem routerLink="/Profile" (click)="$event.preventDefault()">Profile</a>
+              <a ngbDropdownItem routerLink="/BookFunction" (click)="$event.preventDefault()">Book Function</a>
+              <a ngbDropdownItem routerLink="/CheckBook" (click)="$event.preventDefault()">Check Stats</a>
             </div>
           </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink='/'>Contact<span class="sr-only">(current)</span></a>
-        </li>
+        
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
